# minikafka

./: .gitignore  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  quickstart.md
docs/concepts/: fan-out.md  pipelines.md  topics.md
docs/examples/: rss-pipeline.md
docs/reference/: exceptions.md  full-pipeline.md  index.md  pipeline.md  record.md  source.md  topic.md
examples/: rss_pipeline.py
notebooks/: demo.py  pipeline_demo.py
src/minikafka/: __init__.py  core.py
src/slimlink/: __init__.py  core.py
tests/: test_minikafka.py  test_slimlink.py
